base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-slash
  namespace: nkp-devops-lab
spec:
  redirectRegex:
    regex: "^(.*)/user01$"
    replacement: "${1}/user01/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefixes
  namespace: nkp-devops-lab
spec:
  stripPrefix:
    prefixes:
      - /user01
    forceSlash: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nkp-devops-lab-web
  namespace: nkp-devops-lab
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.middlewares: nkp-devops-lab-redirect-slash@kubernetescrd,nkp-devops-lab-stripprefixes@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /user01
        pathType: Prefix
        backend:
          service:
            name: user01-web
            port:
              number: 8080
